@@ -10,7 +10,8 @@ Revision history for perl module Git-Hooks. -*- text -*-
 
   - Remove the following methods from Git::Repository::Plugin::GitHooks,
     which aren't used by plugins: nocarp, clean_cache, eval_gitconfig,
-    set_affected_ref, get_affected_ref_commit_ids, set_authenticated_user.
+    set_affected_ref, get_affected_ref_commit_ids, set_authenticated_user,
+    grok_groups_spec, grok_groups, im_memberof.
 
   [New features]
 
